notification: Properly register notifications

Albeit at bulk, this way we can configure the amount of noise these
notifications make. Also it doesn't include making a sound by default,
which is clearly a problem as it's being used right now.

BUG: 457672